# PUMA

./: .gitignore  LICENSE  PAIR_attack.py  PAIR_geneval.py  PUMA_attack.py  PUMA_geneval.py  Readme.md  chat_round.py  conversation_logger.py  example.py  llm_base.py  optimizer.py  protocols.py  pyproject.toml  util.py
config/: PAIR_config_qwen3-1_7b.toml  PUMA_config_qwen3-1_7b.toml
config/prompt_templates/PAIR/: attacker_system_authority.jinja  attacker_system_logical_appeal.jinja  attacker_system_roleplaying.jinja  attacker_user_feedback.jinja  attacker_user_initial.jinja  eval_system_01.jinja  eval_system_02.jinja  eval_system_wen2025.jinja  eval_user_01.jinja  eval_user_llama_guard.jinja  target_user_qwen3.jinja
config/prompt_templates/PUMA/: attacker_system_critic.jinja  attacker_user_feedback.jinja  attacker_user_initial.jinja  eval_system_01.jinja  eval_user_01.jinja  target_user_foundation_alignment.jinja
config/strategies/: adversarial_example.txt  adversarial_examples.txt  basic_instruction_injection.txt  code_injection.txt  context_injection.txt  contextual.txt  few_shot.txt  fictional_context.txt  flip.txt  input_filtering_bypass.txt  instruction_overriding.txt  obfuscation.txt  output_manipulation.txt  role_playing.txt  role_switching.txt  thought_experiment.txt  zero_shot.txt
config/strategies/0din/: 000-parse.py  Readme.md  hex.txt  (+43 more)
llm-local-gguf/: llm_local_gguf.py  pyproject.toml
test/: fixtures.py  test_optimizer_elite.py  test_optimizer_map_elites_optimizer.py  test_optimizer_search_grid.py  test_optimizer_solution_grid.py  test_protocols.py
(+4 files in other folders)
