[project]
name = "adage-rea-tea"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
  "jinja2>=3.1.6",
  "llm>=0.27.1",
  "llm-local-gguf", # Added for TOML parsing support
]

[dependency-groups]
dev = [
  "ipython>=9.7.0",
  "ty>=0.0.1a27",
]

[tool.uv.workspace]
members = [
  "llm-local-gguf",
]

[tool.uv.sources]
llm-local-gguf = { workspace = true }
